Fixed Bugs (Header text disapears on smaller screens; Food titles get split on new line)

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .button.is-ghost {
-    word-break:break-all;
+    word-break:break-word;
     white-space: wrap;
 }
 
@@ -29,6 +29,8 @@ div card-content {
     overflow: hidden;
 }
 
-.userName{
-    text-decoration: underline;
+@media screen and (max-width: 1024px) {
+    .navbar {
+            display: block;
+        }
 }
